Fix image issue on desktop. Improve footer and sharing moments display on smaller devices

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -99,13 +99,16 @@ footer span {
 
 @media (max-width: 767.98px) {
    footer {
-      display: none;
+      margin-bottom: 45px;
    }
    .section-content {
       display: flex;
       width: 80%;
       justify-content: center;
       align-items: center;
+   }
+   footer span {
+      text-align: center;
    }
 }
 
@@ -154,6 +157,18 @@ footer span {
 .floating-nav-section .navbar ul li a:active,
 .floating-nav-section .navbar ul li a:focus {
    color: #daa520;
+}
+
+@media (max-width: 670px) {
+   .floating-nav-section .navbar {
+      padding: 10px 10px;
+   }
+   .floating-nav-section .navbar ul li {
+      margin: 0 20px;
+   }
+   .floating-nav-section .navbar ul li a {
+      font-size: 1.3em;
+   }
 }
 
 /* ========================================================================== */
@@ -287,6 +302,12 @@ footer span {
 
 .details-content .event-box .event:first-child {
    border-right: 1px solid #9e9e9e;
+}
+
+@media (max-width: 670px) {
+   #sharemoments .section-content {
+      padding-top: 60px !important;
+   }
 }
 
 @media (max-width: 767.98px) {
@@ -464,9 +485,6 @@ footer span {
 }
 
 @media (max-width: 767.98px) {
-   #sharemoments {
-      height: 100vh;
-   }
    #sharemoments .section-content {
       width: 75%;
       text-align: center;
@@ -528,6 +546,8 @@ footer span {
 .modal-body .modal-body-img {
    width: 100%;
    height: auto;
+   object-fit: cover;
+   overflow: hidden;
 }
 
 @media (max-width: 767.98px) {
